@@ -1,3 +1,7 @@
+2012-10-10 dschulze@adobe.com
+	Added 'clip' property from CSS 2.1.
+	Fixed typos.
+
 2012-10-09 bbirtles@mozilla.com
 	Fixed further typos.
 	Added definition of alpha and luminance under 'mask' property.
